--- a/Lesson1/Lesson1/MainWindow.xaml
+++ b/Lesson1/Lesson1/MainWindow.xaml
@@ -2,11 +2,100 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lesson1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        WindowStyle="None"
+        Title="MainWindow" Height="450" Width="800"
+        MinHeight="400" MinWidth="400">
+    
+    
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.3*"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <WrapPanel>
+                <Button>sdfgdsfgsdfg</Button>                
+                <Button>sdfgdsfgsdfg</Button>                
+                <Button>sdfgdsfgsdfg</Button>                
+                <Button>sdfgdsfgsdfg</Button>                
+                <Button>sdfgdsfgsdfg</Button>                
+                <Button>sdfgdsfgsdfg</Button>                
+                <Button>sdfgdsfgsdfg</Button>                
+                <Button>sdfgdsfgsdfg</Button>                
+            </WrapPanel>
+        </Grid>
+        
+        <DockPanel>
+            <Image Width="100" DockPanel.Dock="Right" Source="https://upload.wikimedia.org/wikipedia/commons/6/65/AK-47_type_II_noBG.png"/>
+            <Image Width="100" DockPanel.Dock="Left" Source="https://upload.wikimedia.org/wikipedia/commons/6/65/AK-47_type_II_noBG.png"/>
+            <Image Width="100" DockPanel.Dock="Bottom" Source="https://upload.wikimedia.org/wikipedia/commons/6/65/AK-47_type_II_noBG.png"/>
+        </DockPanel>
+
+        <Grid Grid.Row="2" Grid.Column="0" Grid.RowSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Background="#f4ab34"
+                Grid.Row="0" Grid.Column="0" Content="Button"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="Button"/>
+            <Button Grid.Row="0" Grid.Column="2" Content="Button"/>
+            <Button Grid.Row="0" Grid.Column="3" Content="Button"/>
+            <Button Grid.Row="0" Grid.Column="4" Content="Button"/>
+            
+        </Grid>
+        
+        <StackPanel 
+            HorizontalAlignment="Right" 
+            Orientation="Horizontal" 
+            Grid.Row="0" Grid.Column="1">
+
+            <Button 
+                Click="minimizeBtn_Click" 
+                Name="minimizeBtn"
+                Style="{StaticResource MaterialDesignFlatButton}"
+                Height="40">
+                <md:PackIcon Kind="Minimize"/>
+            </Button>
+            <Button 
+                Click="maximizeBtn_Click"
+                Name="maximizeBtn"
+                Style="{StaticResource MaterialDesignFlatButton}"
+                Height="40">
+                <md:PackIcon Kind="Maximize"/>
+            </Button>
+            <Button 
+                Click="closeBtn_Click" 
+                Name="closeBtn"
+                Style="{StaticResource MaterialDesignFlatButton}"
+                Height="40">
+                <md:PackIcon Kind="Close"/>
+            </Button>
+        </StackPanel>
+        
     </Grid>
 </Window>
