--- a/CinemaMinus/CinemaMinus/Views/InfoView.xaml
+++ b/CinemaMinus/CinemaMinus/Views/InfoView.xaml
@@ -5,9 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CinemaMinus.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Background="red">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        
+        <Label Grid.Row="0" Content="{Binding Movie.Title}"/>
+
+        <Button Grid.Row="1" Content="GoBack"
+                Command="{Binding BackCommand}"/>
     </Grid>
 </UserControl>
