--- a/CinemaMinus/CinemaMinus/Views/InfoView.xaml
+++ b/CinemaMinus/CinemaMinus/Views/InfoView.xaml
@@ -10,11 +10,16 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         
         <Label Grid.Row="0" Content="{Binding Movie.Title}"/>
 
-        <Button Grid.Row="1" Content="GoBack"
+        
+        <Button Grid.Row="1" Content="Order"
+                Command="{Binding OrderCommand}"/>
+
+        <Button Grid.Row="2" Content="GoBack"
                 Command="{Binding BackCommand}"/>
     </Grid>
 </UserControl>
